# 2306060013_doi_AI-2

./: .gitignore  README.md  app.py  improvement.md  pyproject.toml  requirements.txt  weather_logic.py
src/: app.py
src/data/: search_history.csv
