[project]
name = "weather-app"
version = "0.1.0"
description = "Streamlit weather app with search history database"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
